FlightPath 5.x Changelog
========================
2018-12-15
  Modified core's display of the Urgent Message screen, to better allow other modules
  to make modifications.


2018-11-26
  Fixed bug where groups split over more than one semester block were not having courses assigned
  to them correctly.  Partially due to them not having req_by_degree_id set.


2018-11-13
  Added extra data to $form_state, when duplicating an entire year's worth of data.
  
  Added fix for issue #2455, thanks to Logan Buth.  This deals with repeatable courses still appearing
  in groups, even though a setting was set saying they should be advised once enrolled. 

  Also fixed issue with maintaining keys in array for _Group::get_course_id_array function.  Issue #2456,
  credit Logan Buth.

  Issue #2470, Logan Buth.  Fixed typo causing degree_id to always be set to zero in _Course::get_quality_points.
  

2018-10-17
  Added new hook: hook_menu_alter(), for editing menu items.


2018-10-09
  Fixed a theming issue which sometimes would occur in Chrome, on the Majors search page (of the student_search module).
  

2018-05-10
  Fixed display bug in user.module, found a mis-matched </div> tag.
  

2018-05-05
  Made the function Course::load_course_from_data_string_for_requirement_clone() set the course's display_status to "ellible"
  to match the behavior of the default constructor.  Re: issue #2317, thanks to Logan Buth.


2018-04-29
  Made "change term" link in the currently advising box nicer, with more CSS selectors available.
  

2018-04-26
  Small change in system.module, to make theme selection easier (radio buttons instead of having to type in location)


2018-04-22
  Fixed issue #2316 (special thanks to Logan Buth) in which outdated subs aren't always detected in cases
  of combined degrees.
  

2018-04-21
  Fixed small bug where sometimes "courses added by advisor" result in a mysql error while advising, due to
  the "degree_id" being blank and not "0".

 
2018-04-16